kubernetes/api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fibbonaci-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(\/?)(.*)
        backend:
          serviceName: fibbonaci-api-service
          servicePort: 80
